[package]
name = "prepare-oas"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
simple_logger = "1.6.0"
clap = "2.33.1"
json = "0.12.4"
flate2 = { version = "1.0.20", features = ["cloudflare_zlib"], default-features = false }
rayon = "*"
glob = "0.3.0"